# codevoiceassistant

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
codevoice/: __main__.py  audio_listener_process.py  config.py  confirmation.py  llm_refiner.py  notifier.py  overlay.py  prompt_capture.py  utils.py
codevoice/listeners/: listener.py  whisper_listener.py
