[project]
name = "codevoiceassistant"
version = "0.1.0"
description = "A lightweight voice-activated assistant that captures LLM prompts via voice and copies them to your clipboard."
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }

dependencies = [
    "vosk",
    "pyaudio",
    "pyperclip",
    "simpleaudio",
    "openai",
    "requests",
    "tqdm",
    "numpy",
    "python-dotenv",
    "faster-whisper",
    "rapidfuzz"
]

[project.scripts]
codevoice = "codevoice.__main__:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
