[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codevoiceassistant"
version = "0.1.0"
description = "A lightweight voice-activated assistant that captures LLM prompts via voice and copies them to your clipboard."
authors = [
    { name = "Nathan Grant" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "vosk",
    "pyaudio",
    "pyperclip",
    "simpleaudio",
    "openai",
    "requests",
    "tqdm",
    "numpy",
    "python-dotenv",
    "faster-whisper",
    "rapidfuzz",
    "pyqt5"
]

[project.scripts]
codevoice = "codevoice.__main__:main"

[tool.setuptools]
packages = ["codevoice"]